--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                </div>
                <div class="col-md-5 offset-md-1">
                   <div class="text-block">
-                     <p class="animated" data-animate="fadeInUp" data-delay="0">The GUI wallet is used to securely store your Stellite, and is what you will use to check your Stellite balance and send and receive Stellite. The job of the Stellite daemon is to communicate with the network to notify you of new transactions. </p>
+                     <p class="animated" data-animate="fadeInUp" data-delay="0">The GUI wallet is used to securely store your Lumeneo, and is what you will use to check your Lumeneo balance and send and receive Lumeneo. The job of the Lumeneo daemon is to communicate with the network to notify you of new transactions. </p>
                      <ul class="btns">
                         <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/lumeneo-network/dawn-wallet/releases" class="btn btn-sm">GUI WALLET</a></li>
 						<li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/lumeneo-network/lumeneo/releases" class="btn btn-sm">CLI WALLET</a></li>
