--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="author" content="WolfOfCrypto">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="Stellite - Redistribution of wealth using the power of blockchain">
+      <meta name="description" content="Lumeneo - A decentralized, completely anonymous, peer to peer cryptocurrency.">
       <link rel="shortcut icon" href="assets/img/favicon.ico">
       <title>Lumeneo</title>
       <link rel="stylesheet" href="assets/css/vendor.bundle.css">
@@ -75,7 +75,7 @@
                   <div class="text-block">
                      <h2 class="animated" data-animate="fadeInUp" data-delay="0">True anonyminity</h2>
                      <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
-                        Lumeneo is a cryptocurrency based on CryptoNote technology. Our goal is to give users complete anonymity while having fast transactions. It's not a fork of another blockchain, and it has a long and relatively flat emission curve. With its own genesis block there is no degradation of privacy due to ring signatures using different participants for the same tx outputs on opposing forks. Lumeneo uses a static mixin so everyone is on the same playing field, making transactions difficult to trace..
+                        Lumeneo is a cryptocurrency based on CryptoNote technology. Our goal is to give users complete anonymity while having fast transactions. It's not a fork of another blockchain, and it has a long and relatively flat emission curve. With its own genesis block there is no degradation of privacy due to ring signatures using different participants for the same tx outputs on opposing forks. Lumeneo uses a static mixin so everyone is on the same playing field, making transactions difficult to trace.
                      </p>
                   </div>
                </div>
