--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
                   <ul class="navbar-nav animated" data-animate="fadeInDown" data-delay=".9">
-                     <li class="nav-item"><a class="nav-link menu-link" href="http://lumeneo.network/block-explorer/">Block Explorer</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="https://lmo.miner.care/exp/">Block Explorer</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://lumeneo.network/lumeneo-paper-wallet/">Paper Wallet</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://discord.gg/QkbWQ3x">Discord</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://twitter.com/lumeneonetwork">Twitter</a></li>
