--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
                <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
                   <ul class="navbar-nav animated" data-animate="fadeInDown" data-delay=".9">
+                     <li class="nav-item"><a class="nav-link menu-link" href="https://maplechange.com/">Exchange</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://lmo.miner.care/exp/">Block Explorer</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://lumeneo.network/lumeneo-paper-wallet/">Paper Wallet</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="https://multiminer.us/downloads/#">MultiMiner</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://discord.gg/QkbWQ3x">Discord</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://twitter.com/lumeneonetwork">Twitter</a></li>
                   </ul>
@@ -75,7 +77,7 @@
                   <div class="text-block">
                      <h2 class="animated" data-animate="fadeInUp" data-delay="0">True anonyminity</h2>
                      <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
-                        Lumeneo is a cryptocurrency based on CryptoNote technology. Our goal is to give users complete anonymity while having fast transactions. It's not a fork of another blockchain, and it has a long and relatively flat emission curve. With its own genesis block there is no degradation of privacy due to ring signatures using different participants for the same tx outputs on opposing forks. Lumeneo uses a static mixin so everyone is on the same playing field, making transactions difficult to trace.
+                        Lumeneo is a cryptocurrency based on CryptoNote technology. Our goal is to give users complete anonymity while having fast transactions. It's not a fork of another blockchain, and it has a long and relatively flat emission curve. With its own genesis block there is no degradation of privacy due to Borromean Ring Signatures using different participants for the same tx outputs on opposing forks. Lumeneo uses a static mixin so everyone is on the same playing field, making transactions difficult to trace.
                      </p>
                   </div>
                </div>
@@ -90,10 +92,9 @@
                </div>
                <div class="col-md-6 offset-md-1">
                   <div class="text-block">
-                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">Scalability</h2>
+                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">The Elara Sidechain</h2>
                   <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
-                     Lumeneo plans to impliment multiple sidechains for different use cases.
-                     We will eliminate the scaling issue by having multiple chains that have their own token.
+                     Elara is a slow block settlement blockchain that stores data on the blockchain. The Elara ledger is encrypted such that only authorized parties can access the data. Since the data is shared, the records cannot be tampered. Thus, the data will not be held by a single entity. It provides many areas of application as it will provide an alternative to cloud storage. When a file is stored on Elara it is broken up into shards, these shards are encrypted and uploaded onto the blockchain. Sharding requires a small percentage of nodes to see and process every transaction, instead of all nodes as blockchains are designed today. No single entity has the entire file. Only the uploader is aware of the shards locations. A cryptographic hash table is used to locate all of the shards for a file. The uploader holds the private key to access the file as this key should not be shared. Since the shards are encrypted, the nodes cannot see the data that is held in them.
                   </p>
                </div>
                </div>
@@ -110,8 +111,8 @@
                   <div class="text-block">
                      <h2 class="animated" data-animate="fadeInUp" data-delay="0">Secure and private</h2>
                      <p class="lead animated" data-animate="fadeInUp" data-delay=".2">
-                        CryptoNote technology is the foundation of Lumeneo.
-                        It forms a solid and well tested basis allowing us to keep our coin profitable to every single miner.
+                        CryptoNote technology is the foundation of Lumeneo. CryptoNote technology uses ring signatures to mix transactions within the daemon.
+                        It forms a solid and well tested basis allowing us to keep our coin profitable to every single miner by having a slowly declining block reward and an ASIC resistant algorithm.
                      </p>
                   </div>
                </div>
@@ -126,7 +127,7 @@
                   <div class="section-head">
                      <div class="heading-animation"> <span class="line-1"></span><span class="line-2"></span> <span class="line-3"></span><span class="line-4"></span> <span class="line-5"></span><span class="line-6"></span> <span class="line-7"></span><span class="line-8"></span></div>
                      <h2 class="section-title animated" data-animate="fadeInUp" data-delay="0"> wallets<span></span></h2>
-                     <p class="animated" data-animate="fadeInUp" data-delay=".1">Fast and low fee transactions. <br>Download our user friendly wallet1</p>
+                     <p class="animated" data-animate="fadeInUp" data-delay=".1">Fast and low fee transactions. <br>Download The Lumeneo Dawn Wallet</p>
                   </div>
                </div>
             </div>
