--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                      </div>
                      <div class="col-lg-6 col-md-12 order-first">
-                        <div class="header-image animated" data-animate="fadeInRight" data-delay="1.25"> <img src="images/header-image-dark.png" alt="header"> <img class="header-image-icon top-icon" src="images/header-icon-a.png" alt="header-icon"> <img class="header-image-icon left-icon" src="images/header-icon-a.png" alt="header-icon"> <img class="header-image-icon right-icon" src="images/header-icon-b.png" alt="header-icon"></div>
+                        <div class="header-image animated" data-animate="fadeInRight" data-delay="1.25"> <img src="images/lumeneologo.png" alt="header"></div>
                      </div>
                   </div>
                </div>
@@ -189,7 +189,7 @@
                </div>
                <div class="col-lg width-0">
                   <div class="single-roadmap roadmap-down">
-                     <h6>Q1 2019</h6>
+                     <h6>Q2 2019</h6>
                      <p>Side Chain Integration</p>
                   </div>
                </div>
