--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                      </div>
                      <div class="col-lg-6 col-md-12 order-first">
-                        <div class="header-image animated" data-animate="fadeInRight" data-delay="1.25"> <img src="images/lumeneologo.png" alt="header"></div>
+                        <div class="header-image animated" data-animate="fadeInRight" data-delay="1.25"> <img src="images/web.gif" alt="header"></div>
                      </div>
                   </div>
                </div>
