rewrite goals and plans

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                </div>
                <div class="col-md-6 offset-md-1">
                   <div class="text-block">
-                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">The Elara Sidechain</h2>
+                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">Game Development</h2>
                   <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
-                     Elara is a slow block settlement blockchain that stores data on the blockchain. The Elara ledger is encrypted such that only authorized parties can access the data. Since the data is shared, the records cannot be tampered. Thus, the data will not be held by a single entity. It provides many areas of application as it will provide an alternative to cloud storage. When a file is stored on Elara it is broken up into shards, these shards are encrypted and uploaded onto the blockchain. Sharding requires a small percentage of nodes to see and process every transaction, instead of all nodes as blockchains are designed today. No single entity has the entire file. Only the uploader is aware of the shards locations. A cryptographic hash table is used to locate all of the shards for a file. The uploader holds the private key to access the file as this key should not be shared. Since the shards are encrypted, the nodes cannot see the data that is held in them.
+                     The Lumeneo developers are currently working on mobile as well as desktop game development to reward users in Lumeneo. It creates a new form of incentivization that can be used outside of the games for online products or payments to freinds and family. This will introduce individuals to cryptocurrency and grow the space. We plan to make an entire ecosystem of different game genres, from retro games, to modern game engines to involve more users in the Lumeneo community.
                   </p>
                </div>
                </div>
@@ -184,13 +184,13 @@
                <div class="col-lg">
                   <div class="single-roadmap roadmap-sm">
                      <h6>Q4 2018</h6>
-                     <p>iOS & Android Wallet</p>
+                     <p>Android Wallet & Gaunlet Release</p>
                   </div>
                </div>
                <div class="col-lg width-0">
                   <div class="single-roadmap roadmap-down">
-                     <h6>Q2 2019</h6>
-                     <p>Side Chain Integration</p>
+                     <h6>Q1 2019</h6>
+                     <p>eCommerce availability</p>
                   </div>
                </div>
             </div>
@@ -211,7 +211,6 @@
                          <li>100,000,000,000 Total supply</li>
                          <li>30 second block time</li>
                          <li>Cryptonight-lite algorithm</li>
-                         <li>Static Mixin</li>
                          <li>Zero Dust threshold</li>
                          <li>Completely private transactions with ring signatures</li>
                        </ul>
@@ -240,7 +239,8 @@
                <div class="col-md-6 offset-md-3">
                   <h4 class="section-title-md animated" data-animate="fadeInUp" data-delay="0">Free & Open Source Software</h4>
                      <ul class="btns">
-                        <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/lumeneo-network" class="btn btn-sm">VIEW CODE</a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/lumeneo-network" class="btn btn-sm">Lumeneo</a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/elara-blockchain" class="btn btn-sm">Elara</a></li>
 					</ul>
                </div>
             </div>
