--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                <div class="col-lg">
                   <div class="single-roadmap roadmap-sm">
                      <h6>Q4 2018</h6>
-                     <p>Android Wallet & Gaunlet Release</p>
+                     <p>Android Wallet & Gauntlet Release</p>
                   </div>
                </div>
                <div class="col-lg width-0">
