--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <h4 class="section-title-md animated" data-animate="fadeInUp" data-delay="0">Free & Open Source Software</h4>
                      <ul class="btns">
                         <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/lumeneo-network" class="btn btn-sm">Lumeneo</a></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/elara-blockchain" class="btn btn-sm">Elara</a></li>
+                        <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/elara-chain" class="btn btn-sm">Elara</a></li>
 					</ul>
                </div>
             </div>
