--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                </div>
                <div class="col-md-6 order-md-first order-last">
                   <div class="text-block">
-                     <h2 class="animated" data-animate="fadeInUp" data-delay="0">True anonyminity</h2>
+                     <h2 class="animated" data-animate="fadeInUp" data-delay="0">True anonymity</h2>
                      <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
                         Lumeneo is a cryptocurrency based on CryptoNote technology. Our goal is to give users complete anonymity while having fast transactions. It's not a fork of another blockchain, and it has a long and relatively flat emission curve. With its own genesis block there is no degradation of privacy due to Borromean Ring Signatures using different participants for the same tx outputs on opposing forks. Lumeneo uses a static mixin so everyone is on the same playing field, making transactions difficult to trace.
                      </p>
