yeah this had to be done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
                   <ul class="navbar-nav animated" data-animate="fadeInDown" data-delay=".9">
-                     <li class="nav-item"><a class="nav-link menu-link" href="https://maplechange.com/">Exchange</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="https://www.escodex.com">Exchange</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="http://explorer.crypto9coin.cf/lmo/#">Block Explorer</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://lumeneo.network/lumeneo-paper-wallet/">Paper Wallet</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://multiminer.us/downloads/#">MultiMiner</a></li>
@@ -190,7 +190,7 @@
                <div class="col-lg width-0">
                   <div class="single-roadmap roadmap-down">
                      <h6>Q1 2019</h6>
-                     <p>eCommerce availability</p>
+                     <p>eCommerce availability and on going game development</p>
                   </div>
                </div>
             </div>
