--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                      <div class="col-lg-6 col-md-12 order-lg-first">
                         <div class="header-txt">
                            <h1 class="animated" data-animate="fadeInUp" data-delay="1.55">Lumeneo Network</h1>
-                           <p class="lead color-secondary animated" data-animate="fadeInUp" data-delay="1.65">A decentralized, completely anonymous, peer to peer cryptocurrency.</p>
+                           <p class="lead color-secondary animated" data-animate="fadeInUp" data-delay="1.65">Decentralized gaming platform with in game economics on an anonymous blockchain</p>
                            <ul class="btns animated" data-animate="fadeInUp" data-delay="1.75">
                               <li><a href="https://github.com/lumeneo-network/dawn-wallet/releases" class="btn">Download</a></li>
                               <li><a href="https://bitcointalk.org/index.php?topic=4832535.0" class="btn btn-alt">Bitcointalk</a></li>
