--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
                <div class="collapse navbar-collapse justify-content-end" id="navbarToggle">
                   <ul class="navbar-nav animated" data-animate="fadeInDown" data-delay=".9">
-                     <li class="nav-item"><a class="nav-link menu-link" href="https://maplechange.com/">Exchange</a></li>
-                     <li class="nav-item"><a class="nav-link menu-link" href="https://lmo.miner.care/exp/">Block Explorer</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="https://www.escodex.com">Exchange</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="http://explorer.crypto9coin.cf/lmo/#">Block Explorer</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://lumeneo.network/lumeneo-paper-wallet/">Paper Wallet</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://multiminer.us/downloads/#">MultiMiner</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://discord.gg/QkbWQ3x">Discord</a></li>
@@ -47,7 +47,7 @@
                      <div class="col-lg-6 col-md-12 order-lg-first">
                         <div class="header-txt">
                            <h1 class="animated" data-animate="fadeInUp" data-delay="1.55">Lumeneo Network</h1>
-                           <p class="lead color-secondary animated" data-animate="fadeInUp" data-delay="1.65">A decentralized, completely anonymous, peer to peer cryptocurrency.</p>
+                           <p class="lead color-secondary animated" data-animate="fadeInUp" data-delay="1.65">Decentralized gaming platform with in game economics on an anonymous blockchain</p>
                            <ul class="btns animated" data-animate="fadeInUp" data-delay="1.75">
                               <li><a href="https://github.com/lumeneo-network/dawn-wallet/releases" class="btn">Download</a></li>
                               <li><a href="https://bitcointalk.org/index.php?topic=4832535.0" class="btn btn-alt">Bitcointalk</a></li>
@@ -190,8 +190,99 @@
                <div class="col-lg width-0">
                   <div class="single-roadmap roadmap-down">
                      <h6>Q1 2019</h6>
-                     <p>eCommerce availability</p>
+                     <p>eCommerce availability and on going game development</p>
                   </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="section section-pad no-pb section-bg-alt section-fix" id="team">
+   <div class="container">
+      <div class="row text-center">
+         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <div class="section-head">
+               <h2 class="section-title animated" data-animate="fadeInUp" data-delay="0">The Stellite Team <span>Team</span></h2>
+               <p class="animated" data-animate="fadeInUp" data-delay="0.1">The Stellite Team combines a passion for blockchain development, marketing &amp; design with members from all around the globe.</p>
+            </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-md-12">
+            <div class="gaps size-2x"></div>
+            <h3 class="sub-heading ucap">Core Team</h3>
+            <div class="gaps size-2x"></div>
+         </div>
+      </div>
+      <div class="row text-center">
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".2">
+               <div class="team-photo"> <img src="images/kodiak.PNG" alt="" /></div>
+               <div class="team-info">
+                  <h5 class="team-name">Kodiak</h5>
+                  <span class="team-title">FOUNDER &amp; DEVELOPER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".3">
+               <div class="team-photo"> <img src="images/osoese.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Osoese</h5>
+                  <span class="team-title">DEVELOPER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".4">
+               <div class="team-photo"> <img src="images/gal.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Galimba</h5>
+                  <span class="team-title">DEVELOPER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/math.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Mathias</h5>
+                  <span class="team-title">Administrator</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/guppy.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Guppy</h5>
+                  <span class="team-title">MARKETING & SOCIAL MEDIA</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/lus.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Los Muertos</h5>
+                  <span class="team-title">MARKETING & COMMUNITY MANAGER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/andy.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Andy</h5>
+                  <span class="team-title">COMMUNITY MANAGER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/noma.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Noma</h5>
+                  <span class="team-title">COMMUNITY MANAGER</span>
                </div>
             </div>
          </div>
@@ -240,7 +331,6 @@
                   <h4 class="section-title-md animated" data-animate="fadeInUp" data-delay="0">Free & Open Source Software</h4>
                      <ul class="btns">
                         <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/lumeneo-network" class="btn btn-sm">Lumeneo</a></li>
-                        <li class="animated" data-animate="fadeInUp" data-delay="0"><a href="https://github.com/elara-chain" class="btn btn-sm">Elara</a></li>
 					</ul>
                </div>
             </div>
