--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                <div class="team-photo"> <img src="images/lus.PNG" alt="team"></div>
                <div class="team-info">
                   <h5 class="team-name">Los Muertos</h5>
-                  <span class="team-title">MARKETING & COMMUNITY MANAGER</span>
+                  <span class="team-title">SOCIAL MEDIA & COMMUNITY MANAGER</span>
                </div>
             </div>
          </div>
