--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                      <li class="nav-item"><a class="nav-link menu-link" href="https://www.escodex.com">Exchange</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="http://explorer.crypto9coin.cf/lmo/#">Block Explorer</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://lumeneo.network/lumeneo-paper-wallet/">Paper Wallet</a></li>
-                     <li class="nav-item"><a class="nav-link menu-link" href="https://multiminer.us/downloads/#">MultiMiner</a></li>
+                     <li class="nav-item"><a class="nav-link menu-link" href="https://cdn.discordapp.com/attachments/499410750906040320/524048779377115156/LUMENEO_-_BLACKPAPER_V1.0.pdf">Black Paper</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://discord.gg/QkbWQ3x">Discord</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://twitter.com/lumeneonetwork">Twitter</a></li>
                   </ul>
@@ -192,6 +192,80 @@
                      <h6>Q1 2019</h6>
                      <p>eCommerce availability and on going game development</p>
                   </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="section section-pad no-pb section-bg-alt section-fix" id="team">
+   <div class="container">
+      <div class="row">
+         <div class="col-md-12">
+            <div class="gaps size-2x"></div>
+            <h3 class="sub-heading ucap">Core Team</h3>
+            <div class="gaps size-2x"></div>
+         </div>
+      </div>
+      <div class="row text-center">
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".2">
+               <div class="team-photo"> <img src="images/kodiak.PNG" alt="" /></div>
+               <div class="team-info">
+                  <h5 class="team-name">Kodiak</h5>
+                  <span class="team-title">FOUNDER &amp; DEVELOPER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".3">
+               <div class="team-photo"> <img src="images/osoese.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Osoese</h5>
+                  <span class="team-title">DEVELOPER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".4">
+               <div class="team-photo"> <img src="images/gal.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Galimba</h5>
+                  <span class="team-title">DEVELOPER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/math.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Mathias</h5>
+                  <span class="team-title">Administrator</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/guppy.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Guppy</h5>
+                  <span class="team-title">MARKETING & SOCIAL MEDIA</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/lus.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Los Muertos</h5>
+                  <span class="team-title">SOCIAL MEDIA & COMMUNITY MANAGER</span>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6 col-lg-3">
+            <div class="team-circle animated" data-animate="fadeInUp" data-delay=".5">
+               <div class="team-photo"> <img src="images/andy.PNG" alt="team"></div>
+               <div class="team-info">
+                  <h5 class="team-name">Andy</h5>
+                  <span class="team-title">COMMUNITY MANAGER</span>
                </div>
             </div>
          </div>
