Fix wallet name
MonoWallet

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <div class="section-head">
                      <div class="heading-animation"> <span class="line-1"></span><span class="line-2"></span> <span class="line-3"></span><span class="line-4"></span> <span class="line-5"></span><span class="line-6"></span> <span class="line-7"></span><span class="line-8"></span></div>
                      <h2 class="section-title animated" data-animate="fadeInUp" data-delay="0"> wallets<span></span></h2>
-                     <p class="animated" data-animate="fadeInUp" data-delay=".1">Fast and low fee transactions. <br>Download The BitcoinMono Dawn Wallet</p>
+                     <p class="animated" data-animate="fadeInUp" data-delay=".1">Fast and low fee transactions. <br>Download The BitcoinMono MonoWallet</p>
                   </div>
                </div>
             </div>
