--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <div class="text-block">
                      <h2 class="animated" data-animate="fadeInUp" data-delay="0">True anonymity</h2>
                      <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
-                        BitcoinMono is a cryptocurrency based on CryptoNote technology. Our goal is to give users complete anonymity while having fast transactions. It's not a fork of another blockchain, and it has a long and relatively flat emission curve. With its own genesis block there is no degradation of privacy due to Borromean Ring Signatures using different participants for the same tx outputs on opposing forks. BitcoinMono uses a static mixin so everyone is on the same playing field, making transactions difficult to trace.
+                        BitcoinMono is a cryptocurrency based on CryptoNote technology. Our goal is to give users complete anonymity while having fast transactions. It's not a fork of another blockchain, and it has a long and relatively flat emission curve. With its own genesis block there is no degradation of privacy due to Borromean Ring Signatures using different participants for the same tx outputs on opposing forks. BitcoinMono uses mixin so everyone is on the same playing field, making transactions difficult to trace.
                      </p>
                   </div>
                </div>
@@ -90,9 +90,9 @@
                </div>
                <div class="col-md-6 offset-md-1">
                   <div class="text-block">
-                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">Game Development</h2>
+                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">Entertainment Industry Focus</h2>
                   <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
-                     The BitcoinMono developers are currently working on mobile as well as desktop game development to reward users in BitcoinMono. It creates a new form of incentivization that can be used outside of the games for online products or payments to freinds and family. This will introduce individuals to cryptocurrency and grow the space. We plan to make an entire ecosystem of different game genres, from retro games, to modern game engines to involve more users in the BitcoinMono community.
+                     The BitcoinMono developers are currently working on mobile as well as desktop game and entertainment area to reward users in BitcoinMono. It creates a new form of incentivization that can be used outside of the games for online products or payments to freinds and family. This will introduce individuals to cryptocurrency and grow the space. We plan to make an entire ecosystem of different entertainment genres, from casual games, to games of luck to involve more users in the BitcoinMono community.
                   </p>
                </div>
                </div>
