--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <div class="row align-items-center mobile-center">
                      <div class="col-lg-6 col-md-12 order-lg-first">
                         <div class="header-txt">
-                           <h1 class="animated" data-animate="fadeInUp" data-delay="1.55">Bitcoin Mono</h1>
+                           <h1 class="animated" data-animate="fadeInUp" data-delay="1.55">BitcoinMono</h1>
                            <p class="lead color-secondary animated" data-animate="fadeInUp" data-delay="1.65">Copypasta cryptocurrency with integrated features from multiple coins</p>
                            <ul class="btns animated" data-animate="fadeInUp" data-delay="1.75">
                               <li><a href="https://github.com/bitcoinmono/MonoWallet/releases" class="btn">Download</a></li>
