--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                   <ul class="navbar-nav animated" data-animate="fadeInDown" data-delay=".9">
                      <li class="nav-item"><a class="nav-link menu-link" href="https://github.com/bitcoinmono/MonoWallet/releases">Wallet</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://explorer.bitcoinmono.io">Block Explorer</a></li>
+					 <li class="nav-item"><a class="nav-link menu-link" href="https://miningpoolstats.stream/bitcoinmono">Pool</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://discord.gg/4F8pjEK">Discord</a></li>
                      <li class="nav-item"><a class="nav-link menu-link" href="https://twitter.com/btcmono">Twitter</a></li>
                   </ul>
