--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                </div>
                <div class="col-md-6 offset-md-1">
                   <div class="text-block">
-                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">Entertainment Industry Focus</h2>
+                  <h2 class="animated" data-animate="fadeInUp" data-delay="0">Gaming Focus</h2>
                   <p class="lead animated" data-animate="fadeInUp" data-delay=".1">
                      The BitcoinMono developers are currently working on mobile as well as desktop game and entertainment area to reward users in BitcoinMono. It creates a new form of incentivization that can be used outside of the games for online products or payments to freinds and family. This will introduce individuals to cryptocurrency and grow the space. We plan to make an entire ecosystem of different entertainment genres, from casual games, to games of luck to involve more users in the BitcoinMono community.
                   </p>
@@ -183,13 +183,13 @@
                <div class="col-lg">
                   <div class="single-roadmap roadmap-sm">
                      <h6>Q4 2019</h6>
-                     <p>Android Wallet & Gauntlet Release</p>
+                     <p>Mobile Wallet & MonoPay Release</p>
                   </div>
                </div>
                <div class="col-lg width-0">
                   <div class="single-roadmap roadmap-down">
                      <h6>Q1 2020</h6>
-                     <p>eCommerce availability and on going game development</p>
+                     <p>Gaming and entertainment development</p>
                   </div>
                </div>
             </div>
@@ -227,7 +227,7 @@
                      <h2 class="section-title animated" data-animate="fadeInUp" data-delay="0">Specifics <span></span></h2>
                      <p class="lead animated" data-animate="fadeInUp" data-delay=".2">
                        <ul>
-                         <li>1000,000,000,000 Total supply</li>
+                         <li>1,000,000,000,000 Total supply</li>
                          <li>50 second block time</li>
                          <li>Cryptonight-pico algorithm</li>
                          <li>Zero Dust threshold</li>
