--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="author" content="WolfOfCrypto">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="BitcoinMono - A decentralized, completely anonymous, copypasta cryptocurrency.">
+      <meta name="description" content="BitcoinMono - A decentralized, completely anonymous, eSports cryptocurrency.">
       <link rel="shortcut icon" href="assets/img/favicon.ico">
       <title>BitcoinMono</title>
       <link rel="stylesheet" href="assets/css/vendor.bundle.css">
@@ -200,17 +200,17 @@
       <div class="row">
          <div class="col-md-12">
             <div class="gaps size-2x"></div>
-            <h3 class="sub-heading ucap">Core Team</h3>
+            <h3 class="sub-heading ucap">Team</h3>
             <div class="gaps size-2x"></div>
          </div>
       </div>
       <div class="row text-center">
          <div class="col-md-6 col-lg-3">
             <div class="team-circle animated" data-animate="fadeInUp" data-delay=".2">
-               <div class="team-photo"> <img src="images/kodiak.PNG" alt="" /></div>
+               <div class="team-photo"> <img src="images/semipool.png" alt="" /></div>
                <div class="team-info">
-                  <h5 class="team-name">Bobbie</h5>
-                  <span class="team-title">FOUNDER &amp; DEVELOPER</span>
+                  <h5 class="team-name">semiPOOL</h5>
+                  <span class="team-title">FOUNDING &amp; DEVELOPMENT</span>
                </div>
             </div>
          </div>
